force-app/main/default/objects/AI_Security_Incident__c/AI_Security_Incident__c.object-meta.xml
<CustomObject>
    <label>AI Security Incident</label>
    <pluralLabel>AI Security Incidents</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>AI Security Incident</label>
        <displayFormat>ASI-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>