force-app/main/default/objects/AI_Security_Incident__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description_</label>
    <type>LongTextArea</type>
\n    <length>32768</length>
</CustomField>