force-app/main/default/objects/AI_Security_Incident__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <label>Reported_By_</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>\n    <relationshipLabel>Reported By</relationshipLabel>\n    <relationshipName>Reported_By
</CustomField>