force-app/main/default/objects/AI_Security_Incident__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution_</label>
    <type>LongTextArea</type>
\n    <length>32768</length>
</CustomField>