force-app/main/default/objects/AI_Security_Incident__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <label>Resolved_Date_</label>
    <type>DateTime</type>

</CustomField>