force-app/main/default/objects/AI_Security_Incident__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <label>Stack_Trace_</label>
    <type>LongTextArea</type>
\n    <length>32768</length>
</CustomField>