force-app/main/default/objects/AI_Security_Incident__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type_</label>
    <type>Text</type>
    <length>100</length>
</CustomField>